# customer_service_chatbot

./: .env  README.md  app.py  config.py  embeddings.py  generator.py  pyproject.toml  retriever.py  test_retriever.py  utils.py
